# scraper

./: .gitignore  gst_dump.csv  input.txt  insights.py  main.py  main_back.py  pyproject.toml  requirements.txt  vision.py  vision_mcqs.csv  vision_mcqs.json
.devcontainer/: devcontainer.json  docker-compose.yml
core/: __init__.py  db.py  kiran.py  mcqs.json  pdf.py  text.py
core/services/: __init__.py  mcq_service.py  pdf_service.py
core/services/kiran/: __init__.py
data/: ias_current_affairs_quiz.txt  insights_ca_quiz_urls.csv  insta_dart.csv  microtopics.json  qued.csv  questions.csv  rtm_secure.csv  secure_dec2020-dec2024.csv  ssc_quiz.txt  static_quiz_secure.csv
recipe/agriculture/: krushna_pyq.py
recipe/arihant/: index.py  input.txt
recipe/dggca/: __init__.py
recipe/exambot/: __init__.py  db.py  scrape.py
recipe/gst/: __init__.back.py  __init__.py
recipe/iasscore/: __init__.py
recipe/insights/: __init__.py  current_affairs_quiz.py  secure.py
recipe/vision/: __init__.py
src/: main.py
src/core/: __init__.py  base_pdf.py  base_scraper.py  db.py  interfaces.py
src/recipes/: dggca_recipe.py  gst_recipe.py
src/recipes/arihant/: __init__.py  output.csv
src/recipes/exambot/: __init__.py
src/recipes/insights/: secure.py
src/scraper/: __init__.py
src/scraper/config/: __init__.py  settings.py
src/scraper/core/: __init__.py  base.py
src/scraper/models/: __init__.py
src/scripts/: deduplicate_excel.py  fill_rapl.py
src/services/: __init__.py  gst_data_service.py
src/utils/: scraper.py
utils/: __init__.py  scraper.py
(+6 files in other folders)
